[gd_scene load_steps=14 format=2]

[ext_resource path="res://src/enemies/nodes/base_enemy/base_enemy.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/enemies/bosses/fire_slime/fire_slime.gd" type="Script" id=2]
[ext_resource path="res://src/enemies/bosses/fire_slime/fire_slime.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 85, 141.5 )

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 84, 139.5 )

[sub_resource type="CapsuleShape2D" id=3]
radius = 89.0
height = 112.0

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("SpritePivot/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=5]
resource_name = "attack"
length = 1.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("SpritePivot/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("hitBox/CollisionShape2D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.8, 1, 1.1, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 3, 1 ), Vector2( 3, 1 ), Vector2( 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("hitBox/CollisionShape2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.8, 1, 1.1, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 200, 0 ), Vector2( 200, 0 ), Vector2( 0, 0 ) ]
}
tracks/3/type = "method"
tracks/3/path = NodePath("Animation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 1.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ "run" ],
"method": "play"
} ]
}
tracks/4/type = "method"
tracks/4/path = NodePath(".")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 1.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "end_attack"
} ]
}

[sub_resource type="Animation" id=11]
resource_name = "death"
length = 2.1
tracks/0/type = "value"
tracks/0/path = NodePath("SpritePivot/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 88, 89, 90, 91, 92, 93, 94, 95, 96, 97, 98, 99, 100, 101, 102, 103, 104, 105, 106, 107, 108 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "death"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("attackArea/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 2.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, true ]
}

[sub_resource type="Animation" id=6]
resource_name = "idle"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("SpritePivot/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}

[sub_resource type="Animation" id=7]
resource_name = "run"
length = 1.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("SpritePivot/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33 ]
}

[sub_resource type="Animation" id=12]
resource_name = "take_damage"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("SpritePivot/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 66, 67, 68, 69, 70 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "end_take_damage"
} ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("Animation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ "run" ],
"method": "play"
} ]
}

[sub_resource type="CapsuleShape2D" id=8]
radius = 124.0
height = 636.0

[node name="Fire_slime" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="hurtBox" index="0"]
position = Vector2( -2, -14.5 )
shape = SubResource( 9 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitBox" index="0"]
shape = SubResource( 10 )

[node name="Sprite" type="Sprite" parent="SpritePivot" index="0"]
position = Vector2( 26, -187 )
scale = Vector2( 4, 4 )
texture = ExtResource( 3 )
flip_h = true
hframes = 22
vframes = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="3"]
visible = false
position = Vector2( -1, -14 )
shape = SubResource( 3 )

[node name="Animation" type="AnimationPlayer" parent="." index="4"]
anims/RESET = SubResource( 4 )
anims/attack = SubResource( 5 )
anims/death = SubResource( 11 )
anims/idle = SubResource( 6 )
anims/run = SubResource( 7 )
anims/take_damage = SubResource( 12 )

[node name="attackArea" type="Area2D" parent="." index="5"]
collision_layer = 0
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="attackArea" index="0"]
rotation = 1.5708
shape = SubResource( 8 )

[connection signal="area_entered" from="hurtBox" to="." method="_on_take_damge"]
[connection signal="body_entered" from="attackArea" to="." method="_on_attackArea_body_entered"]
